Prevent body from overflowing into sidebar

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -138,8 +138,7 @@
 .containment,
 .limiter {
   position:relative;
-  min-width:680px;
-  max-width:1000px;
+  width: 680px;
   margin:0 auto;
   }
 
